--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
     <title>Rain World!</title>
   </head>
   <body>
     <div id="wall"></div>
-
     <script src="./dest/bundle.js"></script>
   </body>
 </html>
